<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardBackgroundColor="#BBB"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/appImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/headingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/appImage"
                    android:paddingLeft="16sp"
                    android:paddingRight="16dp"
                    android:text="@string/title"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/subHeaderText"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/headingText"
                    android:layout_toEndOf="@+id/appImage"
                    android:lines="2"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/subHeadingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/subHeaderText"
                    android:layout_toEndOf="@+id/appImage"
                    android:gravity="start"
                    android:lines="10"
                    android:maxLines="10"
                    android:paddingBottom="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:textColor="#737078"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/getDealBtn"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subHeadingText"
                    android:background="@color/lightBlue"
                    android:text="@string/button"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardBackgroundColor="#BBB"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16sp"
                    android:paddingRight="16dp"
                    android:text="@string/need_more"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/subHeader"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heading"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/generate_multiple_identities"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/DealBtn"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subHeader"
                    android:background="@color/lightBlue"
                    android:text="@string/button2"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>

